feat: Integrate Tailwind CSS and configure Vite
This commit introduces Tailwind CSS for styling and configures Vite for development.

Key changes include:
- Removing explicit Tailwind CSS configuration from `postcss.config.js` and `tailwind.config.js` as it's now handled inline in `index.html` and `vite.config.ts`.
- Adding Tailwind CSS CDN script and configuration to `index.html` for easier development setup.
- Updating `vite.config.ts` to load environment variables, define API keys, and configure module aliases.
- Adjusting `package.json` to reflect these dependency and plugin changes.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
   <head>
@@ -6,6 +7,27 @@
     <title>ایده‌پرداز مهر | توسعه نرم‌افزار سازمانی</title>
     <meta name="description" content="Official website for Idehpardaz Mehr - Professional software development and digital solutions." />
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
+    <!-- Tailwind CSS Script for development purposes if build step fails, but index.css is preferred -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            fontFamily: {
+              sans: ['Vazirmatn', 'Tahoma', 'sans-serif'],
+            },
+            colors: {
+              primary: 'var(--color-primary)',
+              'primary-hover': 'var(--color-primary-hover)',
+              secondary: 'var(--color-secondary)',
+              text: 'var(--color-text)',
+              accent: 'var(--color-accent)',
+            }
+          }
+        }
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -13,15 +35,12 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
